añadir página de índice inicial con navegación en el encabezado, logotipo y favicon.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import "../styles/style.css";
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GRUPOAQUA | Ingeniería en el manejo del agua | Colombia</title>
-    <link rel="icon" type="image/avif" href="/img/Fabicon.avif" />
+    <link rel="icon" type="image/avif" href="/Fabicon.avif" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -18,7 +18,7 @@ import "../styles/style.css";
     <header>
       <div class="header-container">
         <div class="logo">
-          <img src="img/GrupoAqua_Logo.avif" alt="GRUPOAQUA Logo" />
+          <img src="/GrupoAqua_Logo.avif" alt="GRUPOAQUA Logo" />
         </div>
         <nav>
           <ul>
