Implementar la estructura inicial de la página principal, el estilo, los scripts y los recursos de imágenes AVIF.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import "../styles/style.css";
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GRUPOAQUA | Ingeniería en el manejo del agua | Colombia</title>
-    <link rel="icon" type="image/avif" href="/Fabicon.avif" />
+    <link rel="icon" type="image/avif" href="/Grupo_AQUA/img/Fabicon.avif" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -18,7 +18,7 @@ import "../styles/style.css";
     <header>
       <div class="header-container">
         <div class="logo">
-          <img src="/GrupoAqua_Logo.avif" alt="GRUPOAQUA Logo" />
+          <img src="/Grupo_AQUA/img/GrupoAqua_Logo.avif" alt="GRUPOAQUA Logo" />
         </div>
         <nav>
           <ul>
@@ -26,26 +26,331 @@ import "../styles/style.css";
             <li class="dropdown">
               <a href="#" class="dropbtn">Aguas</a>
               <div class="dropdown-content">
-                <a href="/tda">Tratamientos de Agua</a>
+                <a href="/Grupo_AQUA/tda">Tratamientos de Agua</a>
                 <a href="#">Consultoría</a>
                 <a href="#">Almacenamiento y Bombeo</a>
               </div>
             </li>
             <li class="dropdown">
-              <a href="/acu" class="dropbtn">Acuicultura</a>
+              <a href="/Grupo_AQUA/acu" class="dropbtn">Acuicultura</a>
               <div class="dropdown-content">
                 <a href="#">Circuladores</a>
                 <a href="#">Aireadores</a>
               </div>
             </li>
             <li><a href="https://5micras.com/">Filtros</a></li>
-            <li><a href="/stp">Soporte</a></li>
-            <li><a href="/nosotros">Nosotros</a></li>
+            <li><a href="/Grupo_AQUA/stp">Soporte</a></li>
+            <li><a href="/Grupo_AQUA/nosotros">Nosotros</a></li>
             <li><a href="#">Contacto</a></li>
             <li><a href="#">Proyectos</a></li>
           </ul>
         </nav>
       </div>
     </header>
+
+    <section class="hero">
+      <div class="bubbles">
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+      </div>
+
+      <div class="hero-content">
+        <div class="hero-logo">
+          <img src="/Grupo_AQUA/img/GrupoAqua_Logo.avif" alt="GRUPOAQUA Logo" />
+        </div>
+
+        <h2>Ingeniería y Sistemas para el Manejo del AGUA</h2>
+
+        <div class="hero-description">
+          <p>
+            Somos una empresa dedicada a brindar soluciones integrales en el
+            manejo eficiente del agua, desde la etapa de diagnóstico y asesoría,
+            diseño de soluciones a la medida y servicios complementario de
+            mantenimiento y seguimiento. GRUPOAQUA busca generar un uso
+            eficiente del agua y disminuir el impacto ambiental producido por
+            las diferentes actividades del hombre, mediante el desarrollo de
+            sistemas de tratamiento de aguas y la implementación de equipos en
+            acuicultura.
+          </p>
+        </div>
+
+        <a href="/nosotros" class="cta-button">Ver más</a>
+      </div>
+    </section>
+    <!-- CARRUSEL -->
+    <section class="specialists">
+      <div class="specialists-container">
+        <div class="specialists-text">
+          <h2>Somos <br /> Especialistas en:</h2>
+          <ul>
+            <li>Sistemas de Tratamiento de Aguas Domésticas e Industriales.</li>
+            <li>Sistemas de Potabilización de Agua.</li>
+            <li>Aprovechamiento de Aguas Lluvias y Aguas Grises.</li>
+            <li>Re - uso del agua.</li>
+            <li>Sistemas de Aireación para el Sector de la Acuicultura.</li>
+            <li>Servicios y Consultorías Ambientales.</li>
+          </ul>
+        </div>
+        <div class="specialists-carousel">
+          <div class="carousel-container">
+            <div class="carousel-slide active">
+              <!-- Imagen 1 -->
+              <img src="/Grupo_AQUA/img/carrusel.1.avif" alt="Imagen 1" />
+              <div class="carousel-caption">
+                Planta de Tratamiento Industrial
+                <!-- <span>PTARD - Uso Doméstico</span> -->
+              </div>
+            </div>
+            <div class="carousel-slide">
+              <!-- Imagen 2 -->
+              <img src="/Grupo_AQUA/img/carrusel.2.avif" alt="Imagen 2" />
+              <div class="carousel-caption">
+                Plantas de Tratamiento de Aguas
+                <span>PTARD - Uso Doméstico</span>
+              </div>
+            </div>
+            <div class="carousel-slide">
+              <!-- Imagen 3 -->
+              <img src="/Grupo_AQUA/img/carrusel.3.avif" alt="Imagen 3" />
+              <div class="carousel-caption">
+                Acuicultura
+                <span>Aireador Sprint</span>
+              </div>
+            </div>
+            <div class="carousel-slide">
+              <img src="/Grupo_AQUA/img/carrusel.4.avif" alt="Imagen 4" />
+              <!-- Imagen 4 -->
+              <div class="carousel-caption">Tratamiento de Agua</div>
+            </div>
+            <div class="carousel-slide">
+              <img src="/Grupo_AQUA/img/carrusel.5.avif" alt="Imagen 5" />
+              <!-- Imagen 5 -->
+              <div class="carousel-caption">
+                Acuicultura
+                <span>Aireador Eco</span>
+              </div>
+            </div>
+            <div class="carousel-slide">
+              <img src="/Grupo_AQUA/img/carrusel.6.avif" alt="Imagen 6" />
+              <!-- Imagen 6 -->
+              <div class="carousel-caption">
+                Plantas de Tratamiento de Aguas
+                <span>PTARD - Uso Doméstico</span>
+              </div>
+            </div>
+            <div class="carousel-slide">
+              <img src="/Grupo_AQUA/img/carrusel.7.avif" alt="Imagen 7" />
+              <!-- Imagen 7 -->
+              <div class="carousel-caption">
+                Acuicultura
+                <span>Sistema de Aireación - Splash</span>
+              </div>
+            </div>
+            <div class="carousel-slide">
+              <img src="/Grupo_AQUA/img/carrusel.8.avif" alt="Imagen 8" />
+              <!-- Imagen 8 -->
+              <div class="carousel-caption">Circulador Rio</div>
+            </div>
+            <div class="carousel-slide">
+              <img src="/Grupo_AQUA/img/carrusel.9.avif" alt="Imagen 9" />
+              <!-- Imagen 9 -->
+              <div class="carousel-caption">
+                Plantas de Tratamiento de Aguas
+                <span>PTARD - Uso Doméstico</span>
+              </div>
+            </div>
+            <div class="carousel-slide">
+              <img src="/Grupo_AQUA/img/carrusel.10.avif" alt="Imagen 10" />
+              <!-- Imagen 10 -->
+              <div class="carousel-caption">
+                Aireación en cultivos extensivos
+                <span>Cultivo de camarones</span>
+              </div>
+            </div>
+            <div class="carousel-slide">
+              <!-- Imagen 11 -->
+              <img src="/Grupo_AQUA/img/carrusel.11.avif" alt="Imagen 11" />
+              <div class="carousel-caption">
+                Planta de Tratamiento Industrial
+              </div>
+            </div>
+            <div class="carousel-slide">
+              <!-- Imagen 12 -->
+              <img src="/Grupo_AQUA/img/carrusel.12.avif" alt="Imagen 12" />
+              <div class="carousel-caption">
+                Acuicultura
+                <span>Sprint - Aireador de agua</span>
+              </div>
+            </div>
+            <div class="carousel-slide">
+              <img src="/Grupo_AQUA/img/carrusel.13.avif" alt="Imagen 13" />
+              <!-- Imagen 13 -->
+              <div class="carousel-caption">
+                Plantas de Tratamiento de Aguas
+                <span>PTARD - Uso Doméstico</span>
+              </div>
+            </div>
+            <div class="carousel-slide">
+              <img src="/Grupo_AQUA/img/carrusel.14.avif" alt="Imagen 14" />
+              <!-- Imagen 14 -->
+              <div class="carousel-caption">
+                Plantas de Tratamiento de Aguas
+                <span>PTARD - Uso Doméstico</span>
+              </div>
+            </div>
+            <div class="carousel-slide">
+              <img src="/Grupo_AQUA/img/carrusel.15.avif" alt="Imagen 15" />
+              <!-- Imagen 15 -->
+              <div class="carousel-caption">
+                Sistema de Circulación del Agua
+                <span>Brio</span>
+              </div>
+            </div>
+            <button class="carousel-btn prev">&#10094;</button>
+            <button class="carousel-btn next">&#10095;</button>
+            <div class="slide-counter"></div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Lightbox Modal -->
+    <div id="lightbox" class="lightbox">
+      <span class="close-lightbox">&times;</span>
+      <button class="lightbox-btn prev">&#10094;</button>
+      <img class="lightbox-content" id="lightbox-img" />
+      <div id="lightbox-caption"></div>
+      <button class="lightbox-btn next">&#10095;</button>
+    </div>
+
+    <!-- NUESTRO SERVICIOS -->
+    <section class="services">
+      <div class="services-container">
+        <h2>Nuestros Servicios</h2>
+        <div class="services-grid">
+          <a href="/tda" class="service-card">
+            <div class="icon">
+              <i class="fa-solid fa-hand-holding-droplet"></i>
+            </div>
+            <h3>Tratamiento de Aguas</h3>
+          </a>
+          <a href="/acu" class="service-card">
+            <div class="icon">
+              <i class="fa-solid fa-fish-fins"></i>
+            </div>
+            <h3>Acuicultura</h3>
+          </a>
+          <a href="https://5micras.com/" class="service-card">
+            <div class="icon">
+              <i class="fa-solid fa-filter"></i>
+            </div>
+            <h3>Filtros</h3>
+          </a>
+          <a href="/stp" class="service-card">
+            <div class="icon">
+              <i class="fa-solid fa-gears"></i>
+            </div>
+            <h3>Soporte Técnico</h3>
+          </a>
+          <a href="#" class="service-card">
+            <div class="icon">
+              <i class="fa-solid fa-user-gear"></i>
+            </div>
+            <h3>Consultoría</h3>
+          </a>
+        </div>
+      </div>
+    </section>
+
+    <!-- Clientes section -->
+    <section class="clients">
+      <div class="clients-container">
+        <h2>Algunos de Nuestros Clientes</h2>
+        <div class="clients-grid">
+          <div class="client-card">
+            <!-- Proveedor 1 -->
+            <img src="/Grupo_AQUA/clientes/prov-1.avif" alt="Cliente 1" />
+          </div>
+          <div class="client-card">
+            <!-- Proveedor 2 -->
+            <img src="/Grupo_AQUA/clientes/prov-2.avif" alt="Cliente 2" />
+          </div>
+          <div class="client-card">
+            <!-- Proveedor 3 -->
+            <img src="/Grupo_AQUA/clientes/prov-3.avif" alt="Cliente 3" />
+          </div>
+          <div class="client-card">
+            <!-- Proveedor 4 -->
+            <img src="/Grupo_AQUA/clientes/prov-4.avif" alt="Cliente 4" />
+          </div>
+          <div class="client-card">
+            <!-- Proveedor 5 -->
+            <img src="/Grupo_AQUA/clientes/prov-5.avif" alt="Cliente 5" />
+          </div>
+          <div class="client-card">
+            <!-- Proveedor 6 -->
+            <img src="/Grupo_AQUA/clientes/prov-6.avif" alt="Cliente 6" />
+          </div>
+          <div class="client-card">
+            <!-- Proveedor-7 -->
+            <img src="/Grupo_AQUA/clientes/prov-7.avif" alt="Cliente 7" />
+          </div>
+          <div class="client-card">
+            <!-- Proveedor-8 -->
+            <img src="/Grupo_AQUA/clientes/prov-8.avif" alt="Cliente 8" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Footer section -->
+    <footer>
+      <div class="footer-bg-overlay"></div>
+      <div class="footer-container">
+        <div class="footer-content">
+          <div class="footer-contact">
+            <h3>Contacto</h3>
+            <div class="contact-item">
+              <i class="fa-solid fa-location-dot"></i>
+              <div>
+                <p>Carrera 43F 14 - 45, El Poblado</p>
+                <p>Medellín - Colombia</p>
+              </div>
+            </div>
+            <div class="contact-item">
+              <i class="fa-solid fa-envelope"></i>
+              <p>ventas@grupoaqua.com</p>
+            </div>
+            <div class="contact-item">
+              <i class="fa-solid fa-phone"></i>
+              <p>Teléfono: (604) 448 8224</p>
+            </div>
+            <div class="contact-item">
+              <i class="fa-brands fa-whatsapp"></i>
+              <p>Whatsapp: 316 525 0933</p>
+            </div>
+          </div>
+          <div class="footer-logo-section">
+            <div class="footer-logo">
+              <img src="/Grupo_AQUA/img/GrupoAqua_Logo.avif" alt="GRUPOAQUA Logo" />
+            </div>
+          </div>
+        </div>
+        <div class="footer-bottom">
+          <p>
+            Copyright © 2024 Grupoaqua S.A.S | Todos los derechos reservados
+          </p>
+        </div>
+      </div>
+    </footer>
+
+    <script>
+      import "../scripts/script.js";
+    </script>
   </body>
 </html>
